2001-06-24  James Henstridge  <james@daa.com.au>

	* gtk/gtk-types.c: remove all traces of GtkAccelGroup from this
	file -- GtkAccelGroup is now generated code.

	* gtk/gtk.defs (AccelGroup): add boxed type here.

2001-06-23  James Henstridge  <james@daa.com.au>

	* codegen/codegen.py: generate wrappers for boxed types as well.

	* codegen/defsparser.py (DefsParser.boxed): handle (boxed ...)
	lines.

	* codegen/definitions.py (BoxedDef): add a class for holding a
	Boxed definition.

	* gobjectmodule.c (pyg_signal_new): more fixups to use
	pyg_type_from_object.

	* gtk/gtk.override (_wrap_gtk_accel_group_new): don't use
	PyGtkAccelGroup_New (not sure why I am fixing this -- will change
	soon anyway).
	(_wrap_gtk_tree_store_set_value): use pyg_type_from_object here.
	(_wrap_gtk_list_store_set_value): same here.

	* codegen/argtypes.py (CustomBoxedArg): rename from BoxedArg.
	(BoxedArg): new code for standardised PyGBoxed handling.
	(ArgMatcher.register_custom_boxed): rename from register_boxed
	(ArgMatcher.register_boxed): new function for PyGBoxed types.
	(arg): use ArgMatcher.register_boxed to register GtkAccelGroup.

	* pygobject.h (pyg_boxed_check): change macro to check against the
	typecode, rather than python wrapper type.

2001-06-22  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (GTypeArg.write_param): new arg type for
	GType and GtkType args that uses pyg_type_from_object.

	* gobjectmodule.c (pyg_type_from_object): new function to get a
	type code from various types of python objects (currently, integer
	like objects, strings and other objects that have a __gtype__
	attribute).
	(pygobject__init__): use pyg_type_from_object to get the object
	type.
	(pyg_signal_new): same here.

2001-06-21  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_boxed_getattro): allow getattr to work on
	PyGBoxed types (while not overloading tp_getattr).  We fall back
	to tp_getattr if provided by the boxed type.