@@ -70,6 +70,31 @@
   (c-name GdkPixbufAnimationIter)
 )
 
+
+;; Boxed types ...
+
+(boxed Visual
+  (in-module Gdk)
+  (c-name GdkVisual)
+  (copy-func gdk_visual_ref)
+  (release-func gdk_visual_unref)
+  (field (type-and-name GdkVisualType type))
+  (field (type-and-name gint depth))
+  (field (type-and-name GdkByteOrder byte_order))
+  (field (type-and-name gint colormap_size))
+  (field (type-and-name gint bits_per_rgb))
+  (field (type-and-name guint32 red_mask))
+  (field (type-and-name gint red_shift))
+  (field (type-and-name gint red_prec))
+  (field (type-and-name guint32 green_mask))
+  (field (type-and-name gint green_shift))
+  (field (type-and-name gint green_prec))
+  (field (type-and-name guint32 blue_mask))
+  (field (type-and-name gint blue_shift))
+  (field (type-and-name gint blue_prec))
+)
+
+
 ;; Enumerations and flags ...
 
 (enum ColorContextMode
