@@ -86,20 +86,6 @@ PyGdkGC_New(GdkGC *gc)
 }
 #endif
 
-PyObject *
-PyGdkVisual_New(GdkVisual *visual)
-{
-    PyGdkVisual_Object *self;
-
-    self = (PyGdkVisual_Object *)PyObject_NEW(PyGdkVisual_Object,
-					      &PyGdkVisual_Type);
-    if (self == NULL)
-	return NULL;
-    self->obj = visual;
-    gdk_visual_ref(self->obj);
-    return (PyObject *)self;
-}
-
 #if 0
 PyObject *
 PyGdkColormap_New(GdkColormap *cmap)
@@ -1835,88 +1821,7 @@ PyTypeObject PyGdkGC_Type = {
     0L,0L,0L,0L,
     NULL
 };
-#endif
 
-static void
-pygdk_visual_dealloc(PyGdkVisual_Object *self)
-{
-    gdk_visual_unref(self->obj);
-    PyMem_DEL(self);
-}
-
-static struct memberlist pygdk_visual_members[] = {
-    { "type",          T_INT, offsetof(GdkVisual, type),          READONLY },
-    { "depth",         T_INT, offsetof(GdkVisual, depth),         READONLY },
-    { "byte_order",    T_INT, offsetof(GdkVisual, byte_order),    READONLY },
-    { "colormap_size", T_INT, offsetof(GdkVisual, colormap_size), READONLY },
-    { "bits_per_rgb",  T_INT, offsetof(GdkVisual, bits_per_rgb),  READONLY },
-    { "red_mask",      T_INT, offsetof(GdkVisual, red_mask),      READONLY },
-    { "red_shift",     T_INT, offsetof(GdkVisual, red_shift),     READONLY },
-    { "red_prec",      T_INT, offsetof(GdkVisual, red_prec),      READONLY },
-    { "green_mask",    T_INT, offsetof(GdkVisual, green_mask),    READONLY },
-    { "green_shift",   T_INT, offsetof(GdkVisual, green_shift),   READONLY },
-    { "green_prec",    T_INT, offsetof(GdkVisual, green_prec),    READONLY },
-    { "blue_mask",     T_INT, offsetof(GdkVisual, blue_mask),     READONLY },
-    { "blue_shift",    T_INT, offsetof(GdkVisual, blue_shift),    READONLY },
-    { "blue_prec",     T_INT, offsetof(GdkVisual, blue_prec),     READONLY },
-    { NULL, 0, 0, 0 }
-};
-
-static PyObject *
-pygdk_visual_getattr(PyGdkVisual_Object *self, char *attr)
-{
-    /* handle non int attributes first */
-    if (!strcmp(attr, "type"))
-	return PyInt_FromLong(self->obj->type);
-    else if (!strcmp(attr, "byte_order"))
-	return PyInt_FromLong(self->obj->byte_order);
-    else if (!strcmp(attr, "red_mask"))
-	return PyInt_FromLong(self->obj->red_mask);
-    else if (!strcmp(attr, "green_mask"))
-	return PyInt_FromLong(self->obj->green_mask);
-    else if (!strcmp(attr, "blue_mask"))
-	return PyInt_FromLong(self->obj->blue_mask);
-    /* rest are all ints, so PyMember_Get should have not problems */
-    return PyMember_Get((char *)self->obj, pygdk_visual_members, attr);
-}
-
-static int
-pygdk_visual_compare(PyGdkVisual_Object *self, PyGdkVisual_Object *v)
-{
-    if (self->obj == v->obj) return 0;
-    if (self->obj > v->obj) return -1;
-    return 1;
-}
-
-static long
-pygdk_visual_hash(PyGdkVisual_Object *self)
-{
-    return (long)self->obj;
-}
-
-PyTypeObject PyGdkVisual_Type = {
-    PyObject_HEAD_INIT(NULL)
-    0,
-    "GdkVisual",
-    sizeof(PyGdkVisual_Object),
-    0,
-    (destructor)pygdk_visual_dealloc,
-    (printfunc)0,
-    (getattrfunc)pygdk_visual_getattr,
-    (setattrfunc)0,
-    (cmpfunc)pygdk_visual_compare,
-    (reprfunc)0,
-    0,
-    0,
-    0,
-    (hashfunc)pygdk_visual_hash,
-    (ternaryfunc)0,
-    (reprfunc)0,
-    0L,0L,0L,0L,
-    NULL
-};
-
-#if 0
 static void
 PyGdkColormap_Dealloc(PyGdkColormap_Object *self)
 {
@@ -3587,20 +3492,6 @@ PyGdkEvent_to_value(GValue *value, PyObject *object)
     return -1;
 }
 static PyObject *
-PyGdkVisual_from_value(const GValue *value)
-{
-    return PyGdkVisual_New(g_value_get_boxed(value));
-}
-static int
-PyGdkVisual_to_value(GValue *value, PyObject *object)
-{
-    if (PyGdkVisual_Check(object)) {
-	g_value_set_boxed(value, PyGdkVisual_Get(object));
-	return 0;
-    }
-    return -1;
-}
-static PyObject *
 PyGtkSelectionData_from_value(const GValue *value)
 {
     return PyGtkSelectionData_New(g_value_get_boxed(value));
@@ -3685,9 +3576,6 @@ _pygtk_register_boxed_types(PyObject *moddict)
 #if 0
     register_tp(GdkWindow);
     register_tp(GdkGC);
-#endif
-    register_tp2(GdkVisual, GDK_TYPE_VISUAL);
-#if 0
     register_tp(GdkColormap);
     register_tp(GdkDragContext);
 #endif
