@@ -38,9 +38,6 @@ struct _PyGtk_FunctionStruct {
     PyTypeObject *gdkEvent_type;
     PyObject *(* gdkEvent_new)(GdkEvent *event);
 
-    PyTypeObject *gdkVisual_type;
-    PyObject *(* gdkVisual_new)(GdkVisual *visual);
-
     PyTypeObject *gtkSelectionData_type;
     PyObject *(* gtkSelectionData_new)(GtkSelectionData *data);
 
@@ -82,11 +79,6 @@ typedef struct {
 
 typedef struct {
     PyObject_HEAD
-    GdkVisual *obj;
-} PyGdkVisual_Object;
-
-typedef struct {
-    PyObject_HEAD
     GtkSelectionData *obj;
 } PyGtkSelectionData_Object;
 
@@ -125,7 +117,6 @@ typedef struct {
 #define PyGdkFont_Get(v) (((PyGdkFont_Object *)(v))->obj)
 #define PyGdkColor_Get(v) (&((PyGdkColor_Object *)(v))->obj)
 #define PyGdkEvent_Get(v) (((PyGdkEvent_Object *)(v))->obj)
-#define PyGdkVisual_Get(v) (((PyGdkVisual_Object *)(v))->obj)
 #define PyGtkSelectionData_Get(v) (((PyGtkSelectionData_Object *)(v))->obj)
 #define PyGdkAtom_Get(v) (((PyGdkAtom_Object *)(v))->atom)
 #define PyGdkCursor_Get(v) (((PyGdkCursor_Object *)(v))->obj)
@@ -151,7 +142,6 @@ struct _PyGtk_FunctionStruct *_PyGtk_API;
 #define PyGdkFont_Type          *(_PyGtk_API->gdkFont_type)
 #define PyGdkColor_Type         *(_PyGtk_API->gdkColor_type)
 #define PyGdkEvent_Type         *(_PyGtk_API->gdkEvent_type)
-#define PyGdkVisual_Type        *(_PyGtk_API->gdkVisual_type)
 #define PyGtkSelectionData_Type *(_PyGtk_API->gtkSelectionData_type)
 #define PyGdkAtom_Type          *(_PyGtk_API->gdkAtom_type)
 #define PyGdkCursor_Type        *(_PyGtk_API->gdkCursor_type)
@@ -164,7 +154,6 @@ struct _PyGtk_FunctionStruct *_PyGtk_API;
 #define PyGdkFont_Check(v) ((v)->ob_type == _PyGtk_API->gdkFont_type)
 #define PyGdkColor_Check(v) ((v)->ob_type == _PyGtk_API->gdkColor_type)
 #define PyGdkEvent_Check(v) ((v)->ob_type == _PyGtk_API->gdkEvent_type)
-#define PyGdkVisual_Check(v) ((v)->ob_type == _PyGtk_API->gdkVisual_type)
 #define PyGtkSelectionData_Check(v) ((v)->ob_type == _PyGtk_API->gtkSelectionData_type)
 #define PyGdkAtom_Check(v) ((v)->ob_type == _PyGtk_API->gdkAtom_type)
 #define PyGdkCursor_Check(v) ((v)->ob_type == _PyGtk_API->gdkCursor_type)
@@ -177,7 +166,6 @@ struct _PyGtk_FunctionStruct *_PyGtk_API;
 #define PyGdkFont_New          (_PyGtk_API->gdkFont_new)
 #define PyGdkColor_New         (_PyGtk_API->gdkColor_new)
 #define PyGdkEvent_New         (_PyGtk_API->gdkEvent_new)
-#define PyGdkVisual_New        (_PyGtk_API->gdkVisual_new)
 #define PyGtkSelectionData_New (_PyGtk_API->gtkSelectionData_new)
 #define PyGdkAtom_New          (_PyGtk_API->gdkAtom_new)
 #define PyGdkCursor_New        (_PyGtk_API->gdkCursor_new)
