@@ -1,5 +1,9 @@
 2001-06-24  James Henstridge  <james@daa.com.au>
 
+	* gtk/gtk-types.c: removed all traces of GdkVisual.
+
+	* gtk/gdk.defs (Visual): add boxed type for visual.
+
 	* gtk/gtk-types.c: remove all traces of GtkAccelGroup from this
 	file -- GtkAccelGroup is now generated code.
 
